--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "marisa-trie"]
 	path = marisa-trie
-	url = https://github.com/rinigus/marisa-trie.git
+	url = https://github.com/s-yata/marisa-trie.git
